--- a/src/client/css/app.less
+++ b/src/client/css/app.less
@@ -2,3 +2,11 @@ body {
   margin: 0px;
   padding: 0px;
 }
+
+#app {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
