--- a/src/server/views/layout.jade
+++ b/src/server/views/layout.jade
@@ -9,8 +9,7 @@ html(lang='en', xmlns='http://www.w3.org/1999/xhtml')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='viewport', content='width=device-width,initial-scale=1')
 
-    link(href="/css/app.bundle.css", type="text/css", rel="stylesheet", media="all")
-    script(src="/js/app.bundle.js", type="text/javascript")
+    block resources
 
   body
     #container
